Fix weird spacing in header

--- a/styles/index.css
+++ b/styles/index.css
@@ -653,7 +653,7 @@ nav{
     }
 
     .nav__container{
-        padding: 5px 140px 0 140px;
+        padding: 5px 140px 10px 140px;
     }
 
     .nav__container h2{
@@ -665,7 +665,7 @@ nav{
     }
 
     .intro__container{
-        /* padding: 5px 100px 0 100px; */
+        padding: 5px 140px 10px 140px;
         margin-bottom: 20px;
     }
 
